--- a/app/jade-mobile/includes/aside-menu.jade
+++ b/app/jade-mobile/includes/aside-menu.jade
@@ -12,65 +12,65 @@ nav#slide-menu
   .m-t-sm
     ul.table-view.main-menu
       li.table-view-cell
-        a(href='tours.html')
+        a(href='/mobile/tours.html')
           i.ico.ico-tours
           span.inline Tours
 
-      li.table-view-cell
-        a(href='hotels.html')
+      li.table-view-cell.active
+        a(href='/mobile/hotels.html')
           i.ico.ico-flight
           span.inline Flight
 
       li.table-view-cell
-        a(href='hotels.html')
+        a(href='/mobile/hotels.html')
           i.ico.ico-hotel
           span.inline Hotels
 
       li.table-view-cell
-        a(href='document.html')
+        a(href='/mobile/document.html')
           i.ico.ico-document
           span.inline Visa &amp; Passport
 
       li.table-view-cell
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           i.ico.ico-blog
           span.inline Blog
 
       //- li.table-view-cell.access-menu
-      //-   a(href='blog.html')
+      //-   a(href='/mobile/blog.html')
       //-     i.ico.ico-mobile.ico-login
       //-     span.inline Login
 
       //- li.table-view-cell.access-menu
-      //-   a(href='blog.html')
+      //-   a(href='/mobile/blog.html')
       //-     i.ico.ico-mobile.ico-register
       //-     span.inline Register
 
     ul.list-style.bg-black
       li.access-menu
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline Profile Setting
 
       li.access-menu
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline My Bookings
 
       li.access-menu
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline My Credit Card Setting
 
       li.access-menu
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline Passenger List
 
 
     ul.list-style
       li
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline About
       li
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline FAQ
       li
-        a(href='blog.html')
+        a(href='/mobile/blog.html')
           span.inline Contact Us
