--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -1,3 +1,61 @@
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-size: 12px;
+  height: 100%;
+  position: static !important;
+}
+
+a {
+  color: #428bca;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  line-height: 1;
+}
+
+h1, .h1 {
+  font-size: 36px;
+}
+
+h2, .h2 {
+  font-size: 30px;
+}
+
+h3, .h3 {
+  font-size: 24px;
+}
+
+h4, .h4 {
+  font-size: 18px;
+}
+
+h5, .h5 {
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+h6, .h6 {
+  margin-top: 20px;
+  font-size: 12px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: #777;
+}
+
 .pos-rlt {
   position: relative
 }
@@ -231,6 +289,11 @@ a.text-orange {
 .text-sm {
   font-size: 12px
 }
+
+.text-center {
+  text-align: center;
+}
+
 
 .text-xs {
   font-size: 11px
