--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -100,6 +100,12 @@
         height: 16px;
         background-position: -33px 0;
       }
+
+      &-hotel-md {
+        width: 18px;
+        height: 25px;
+        background-position: 0px -19px;
+      }
     }
   }
 }
