--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -1,7 +1,7 @@
 @import "font-awesome/font-awesome";
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
-@import "mobile/ratchet.less";
+@import "bootstrap/normalize.less";
 
 @import "web/fonts.less";
 
@@ -9,5 +9,5 @@
 @import "mobile/spinner.less";
 
 @import "mobile/helper.less";
-
+@import "mobile/table-view.less";
 @import "mobile/main.less";
