--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -1,12 +1,3 @@
-body {
-  font-size: 12px;
-
-  &.mobile {
-    height: 100%;
-    position: static !important;
-  }
-}
-
 nav#slide-menu {
   position: fixed;
   top: 0;
@@ -48,10 +39,19 @@ nav#slide-menu {
       background-color: #000;
     }
 
+    &.active {
+      border-top: 1px solid #040404;
+      a {
+        background: #000;
+      }
+    }
+
     a {
       background: #1f1f1f;
       display: block;
       margin: -12px -20px -12px -50px;
+
+
     }
 
     &.access-menu {
@@ -141,6 +141,9 @@ body.menu-active {
     .menu-trigger {
       left: 250px
     }
+    .title {
+      margin-left: 150px;
+    }
   }
 
   nav#slide-menu {
@@ -155,9 +158,18 @@ body.menu-active {
 
 header {
   &.bar {
+    position: fixed;
     background: @brand-primary;
     height: 50px;
     border-bottom: 0;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    padding-right: 10px;
+    padding-left: 10px;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
   }
 
   .menu-trigger {
@@ -176,6 +188,21 @@ header {
       margin-left: 14px;
       margin-top: 19.5px;
     }
+  }
+
+  .title {
+    position: absolute;
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0 -10px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 44px;
+    color: #000;
+    text-align: center;
+    white-space: nowrap;
+    .transition(margin 300ms);
   }
 
   h1.title {
@@ -198,7 +225,7 @@ header {
 
 }
 .menu-bar {
-  margin-top: 50px;
+  margin-top: 49px;
   background: #007589;
 
   .user-info {
@@ -208,6 +235,7 @@ header {
   ul {
     margin: 0;
     padding: 0;
+    height: 38px;
   }
 
   li {
@@ -217,9 +245,9 @@ header {
     width: 106px;
     position: relative;
 
-    &.b-r.b-l {
-      width: 108px;
-    }
+    // &.b-r.b-l {
+    //   width: 108px;
+    // }
 
     .ico {
       position: absolute;
@@ -270,12 +298,20 @@ footer {
 }
 
 .form-search {
+  position: relative;
   .ico-search {
     position: absolute;
     top: 10px;
     left: 10px;
   }
   input {
+    width: 100%;
+    height: 35px;
+    -webkit-appearance: none;
+    padding: 0 15px;
+    line-height: 21px;
+    background-color: #fff;
+    outline: none;
     border: 0;
     display: block;
     padding-left: 30px;
@@ -299,6 +335,23 @@ footer {
     background: url(../img/mobile/bg-home-banner.png) repeat-x top center;
   }
 
+  &.hotels {
+    height: 130px;
+    .banner-title {
+      font-weight: 600;
+      font-size: 17px;
+      color: #282828;
+      line-height: normal;
+      margin-bottom: 5px;
+    }
+
+    .subtitle {
+      color: #ef9630;
+      margin: 0;
+    }
+  }
+
+
   .banner-title {
     font-size: 14px;
     color: #fff;
@@ -317,9 +370,9 @@ footer {
     color: #fff;
     height: 130px;
     width: 100%;
-    background: rgba(0, 0, 0, 0.4);
     padding-left: 15px;
     line-height: 18px;
+    background: rgba(0, 0, 0, 0.4);
 
     .name {
       margin-top: 85px;
