--- a/app/jade-mobile/includes/aside-menu.jade
+++ b/app/jade-mobile/includes/aside-menu.jade
@@ -17,7 +17,7 @@ nav#slide-menu
           span.inline Tours
 
       li.table-view-cell.active
-        a(href='/mobile/hotels.html')
+        a(href='/mobile/flights.html')
           i.ico.ico-flight
           span.inline Flight
 
