--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -385,6 +385,27 @@ footer {
     }
   }
 
+  .pricing-flight {
+    top: 0;
+    right: 0;
+    width: 73px;
+    height: 60px;
+    background: #fcbc56;
+    color: #000;
+    text-align: center;
+
+    label {
+      display: block;
+      .text-u-c;
+      margin-top: 10px;
+      color: #8f3000
+    }
+
+    .currency {
+      .text-sm;
+    }
+  }
+
   figure {
     margin: 0;
     height: 130px;
