--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -106,6 +106,12 @@
         height: 25px;
         background-position: 0px -19px;
       }
+
+      &-flight-md {
+        width: 30px;
+        height: 17px;
+        background-position: -21px -19px;
+      }
     }
   }
 }
