--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -112,6 +112,39 @@
         height: 17px;
         background-position: -21px -19px;
       }
+
+      &-one-way-arrow {
+        width: 29px;
+        height: 29px;
+        background-position: 0 -48px;
+      }
+
+      &-switch-arrow {
+        width: 28px;
+        height: 28px;
+        background-position: -29px -48px;
+      }
+
+      &-increase-arrow,
+      &-left-arrow-circle {
+        width: 29px;
+        height: 29px;
+        background-position: -60px -48px;
+      }
+
+      &-increase-arrow,
+      &-right-arrow-circle {
+        width: 29px;
+        height: 29px;
+        background-position: -60px -47px;
+      }
+
+      &-decrease-arrow,
+      &-left-arrow-circle {
+        width: 29px;
+        height: 29px;
+        background-position: -89px -47px;
+      }
     }
   }
 }
