--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -8,6 +8,12 @@
 @import "helper/icons.less";
 @import "mobile/spinner.less";
 
+@import "bootstrap/dropdowns.less";
+@import "plugins/datepicker";
+
 @import "mobile/helper.less";
 @import "mobile/table-view.less";
 @import "mobile/main.less";
+@import "mobile/form-find.less";
+@import "mobile/booking.less";
+
