--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -293,7 +293,9 @@ a.text-orange {
 .text-center {
   text-align: center;
 }
-
+.text-left {
+  text-align: left;
+}
 
 .text-xs {
   font-size: 11px
@@ -886,3 +888,9 @@ a.text-orange {
   padding-bottom: 0
 }
 
+.pointer {
+  cursor: pointer;
+}
+.clearfix {
+  .clearfix();
+}
