--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -130,6 +130,11 @@ div#container {
   height: 210px;
   height: auto !important;
    .transition(all 300ms);
+
+  &.form-pencarian {
+    background: #eee;
+    padding-bottom: 50px
+  }
 }
 
 body.menu-active {
@@ -415,5 +420,12 @@ footer {
       width: 100%;
       height: 130px;
     }
+  }
+}
+
+
+.datepicker {
+  &.datepicker-dropdown {
+    left: 0 !important;
   }
 }
