--- a/app/jade-mobile/includes/header.jade
+++ b/app/jade-mobile/includes/header.jade
@@ -10,15 +10,15 @@ header.bar.bar-nav
 .menu-bar
   ul.list-unstyled.text-u-c
     li
-      a(href='/mobile/tours.html')
+      a(href='/mobile/find-tours.html')
         i.ico.ico-tours
         span.block Find Tour
     li.b-r.b-l
-      a(href='/mobile/flights.html')
+      a(href='/mobile/find-flights.html')
         i.ico.ico-flight
         span.block Find Flight
     li
-      a(href='/mobile/hotels.html')
+      a(href='/mobile/find-hotels.html')
         i.ico.ico-hotel
         span.block Find Hotel
   .clearfix
