--- a/app/less/mobile/form-find.less
+++ b/app/less/mobile/form-find.less
@@ -164,7 +164,6 @@
 
     &.check-in,
     &.check-out {
-      width: 205px;
       padding: 5px 0 0 0;
       position: relative;
 
@@ -374,6 +373,14 @@
             font-size: 16px;
           }
         }
+      }
+    }
+
+    .checkbox-date {
+      padding:10px 0 40px 0;
+      font-size: 14px;
+      label {
+        color: #5a5353;
       }
     }
 
