--- a/app/jade-mobile/find-hotels.jade
+++ b/app/jade-mobile/find-hotels.jade
@@ -5,11 +5,11 @@ include includes/mixin
 block main
   #main-wrap.form-pencarian.pos-rlt
     form.form-find.sapta-form(id="formFindHotels", method="GET", action="hotel-search.html")
-      h4.text-u-c.title-search.text-center.m-b-lg Find Flights
+      h4.text-u-c.title-search.text-center.m-b-lg Find Hotels
         span.close
 
       .form-group
-        .boxing.flight-from.selectbox.b.m-b-sm.pos-rlt
+        .boxing.selectbox.b.m-b-sm.pos-rlt
           label.block.text-xs Search Hotels In
           select.block(name="location")
             option(selected="selected") Jakarta
@@ -19,7 +19,7 @@ block main
             option() Bali/Denpasar
 
       .form-group
-        .boxing.flight-to.selectbox.b.m-b-sm.pos-rlt
+        .boxing.selectbox.b.m-b-sm.pos-rlt
           label.block.text-xs Duration
           select.block(name="nationality")
             option(value="1") 1 Nights
@@ -36,7 +36,7 @@ block main
         .clearfix
 
       .form-group
-        .pull-right.text-right.checkbox-date
+        .pull-right.text-right.checkout-date
           label.f-bold Check Out:&nbsp;
           span.day-date Minggu, 02 Jan 2015
         .clearfix
