--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -145,6 +145,25 @@
         height: 29px;
         background-position: -89px -47px;
       }
+
+      &-arrow-down-sm,
+      &-arrow-up-sm,
+      &-info-circle {
+        width: 16px;
+        height: 17px;
+      }
+
+      &-arrow-down-sm {
+        background-position: -67px 0;
+      }
+
+      &-arrow-up-sm {
+        background-position: -85px 0;
+      }
+
+      &-info-circle {
+        background-position: -49px 0;
+      }
     }
   }
 }
