--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -233,7 +233,7 @@ p {
 }
 
 .f-bold {
-  font-family: "Gotham Black";
+  font-weight: 600
 }
 
 .text-darker {
@@ -284,6 +284,10 @@ a.text-orange {
 
 .text-md {
   font-size: 15px;
+}
+
+.text-14px {
+  font-size: 14px;
 }
 
 .text-sm {
