--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -147,7 +147,7 @@ body.menu-active {
       left: 250px
     }
     .title {
-      margin-left: 150px;
+      // margin-left: 150px;
     }
   }
 
@@ -247,7 +247,7 @@ header {
     float: left;
     display: block;
     border-color: #158ea3;
-    width: 106px;
+    width: 33%;
     position: relative;
 
     // &.b-r.b-l {
