--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -78,7 +78,8 @@
 }
 .fa-spin {
   -webkit-animation: fa-spin 2s infinite linear;
-  animation: fa-spin 2s infinite linear;
+  -o-animation: fa-spin 2s infinite linear;
+     animation: fa-spin 2s infinite linear;
 }
 @-webkit-keyframes fa-spin {
   0% {
@@ -90,52 +91,72 @@
     transform: rotate(359deg);
   }
 }
-@keyframes fa-spin {
+@-o-keyframes fa-spin {
   0% {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+       transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+       transform: rotate(359deg);
+  }
+}
+@keyframes fa-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+       transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+       transform: rotate(359deg);
   }
 }
 .fa-rotate-90 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+     transform: rotate(90deg);
 }
 .fa-rotate-180 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+     transform: rotate(180deg);
 }
 .fa-rotate-270 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
-  transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+     transform: rotate(270deg);
 }
 .fa-flip-horizontal {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
   -webkit-transform: scale(-1, 1);
   -ms-transform: scale(-1, 1);
-  transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+     transform: scale(-1, 1);
 }
 .fa-flip-vertical {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
   -webkit-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
-  transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+     transform: scale(1, -1);
 }
 :root .fa-rotate-90,
 :root .fa-rotate-180,
 :root .fa-rotate-270,
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
-  filter: none;
+  -webkit-filter: none;
+          filter: none;
 }
 .fa-stack {
   position: relative;
@@ -1761,7 +1782,8 @@ figure {
 }
 hr {
   -moz-box-sizing: content-box;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   height: 0;
 }
 pre {
@@ -1811,7 +1833,9 @@ input {
 }
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
 }
 input[type="number"]::-webkit-inner-spin-button,
@@ -1941,7 +1965,8 @@ th {
 }
 .ico-is-check {
   background: url(../img/ico-big-check.png) no-repeat 0 0;
-  background-size: 13px 13px;
+  -webkit-background-size: 13px 13px;
+          background-size: 13px 13px;
 }
 .ico-is-uncheck {
   background: url(../img/input-uncheck.png) no-repeat 0 0;
@@ -2007,6 +2032,21 @@ th {
   width: 29px;
   height: 29px;
   background-position: -89px -47px;
+}
+.ico.ico-mobile.ico-arrow-down-sm,
+.ico.ico-mobile.ico-arrow-up-sm,
+.ico.ico-mobile.ico-info-circle {
+  width: 16px;
+  height: 17px;
+}
+.ico.ico-mobile.ico-arrow-down-sm {
+  background-position: -67px 0;
+}
+.ico.ico-mobile.ico-arrow-up-sm {
+  background-position: -85px 0;
+}
+.ico.ico-mobile.ico-info-circle {
+  background-position: -49px 0;
 }
 .bg-white .ico,
 .bg-transparent .ico {
@@ -2291,7 +2331,8 @@ th {
   height: 21px;
   background-image: url(../img/card-american-express.png);
   background-repeat: no-repeat;
-  background-size: 33px 21px;
+  -webkit-background-size: 33px 21px;
+          background-size: 33px 21px;
 }
 .bg-white .ico-visa,
 .bg-transparent .ico-visa {
@@ -2299,7 +2340,8 @@ th {
   height: 21px;
   background-image: url(../img/card-visa.png);
   background-repeat: no-repeat;
-  background-size: 33px 21px;
+  -webkit-background-size: 33px 21px;
+          background-size: 33px 21px;
 }
 .bg-white .ico-master-card,
 .bg-transparent .ico-master-card {
@@ -2307,7 +2349,8 @@ th {
   height: 21px;
   background-image: url(../img/card-master-card.png);
   background-repeat: no-repeat;
-  background-size: 33px 21px;
+  -webkit-background-size: 33px 21px;
+          background-size: 33px 21px;
 }
 .bg-white .ico-pencil,
 .bg-transparent .ico-pencil {
@@ -2397,30 +2440,12 @@ th {
 @-webkit-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@-moz-keyframes spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -2429,14 +2454,12 @@ th {
 @-o-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -2445,14 +2468,12 @@ th {
 @keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -2466,17 +2487,10 @@ th {
 /* :not(:required) hides this rule from IE9 and below */
 .spinner:not(:required) {
   -webkit-animation: spinner 1500ms infinite linear;
-  -moz-animation: spinner 1500ms infinite linear;
-  -ms-animation: spinner 1500ms infinite linear;
   -o-animation: spinner 1500ms infinite linear;
   animation: spinner 1500ms infinite linear;
-  -webkit-border-radius: 0.5em;
-  -moz-border-radius: 0.5em;
-  -ms-border-radius: 0.5em;
-  -o-border-radius: 0.5em;
   border-radius: 0.5em;
   -webkit-box-shadow: rgba(0, 0, 51, 0.3) 1.5em 0 0 0, rgba(0, 0, 51, 0.3) 1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) 0 1.5em 0 0, rgba(0, 0, 51, 0.3) -1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) -1.5em 0 0 0, rgba(0, 0, 51, 0.3) -1.1em -1.1em 0 0, rgba(0, 0, 51, 0.3) 0 -1.5em 0 0, rgba(0, 0, 51, 0.3) 1.1em -1.1em 0 0;
-  -moz-box-shadow: rgba(0, 0, 51, 0.3) 1.5em 0 0 0, rgba(0, 0, 51, 0.3) 1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) 0 1.5em 0 0, rgba(0, 0, 51, 0.3) -1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) -1.5em 0 0 0, rgba(0, 0, 51, 0.3) -1.1em -1.1em 0 0, rgba(0, 0, 51, 0.3) 0 -1.5em 0 0, rgba(0, 0, 51, 0.3) 1.1em -1.1em 0 0;
   box-shadow: rgba(0, 0, 51, 0.3) 1.5em 0 0 0, rgba(0, 0, 51, 0.3) 1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) 0 1.5em 0 0, rgba(0, 0, 51, 0.3) -1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) -1.5em 0 0 0, rgba(0, 0, 51, 0.3) -1.1em -1.1em 0 0, rgba(0, 0, 51, 0.3) 0 -1.5em 0 0, rgba(0, 0, 51, 0.3) 1.1em -1.1em 0 0;
   display: inline-block;
   font-size: 10px;
@@ -2522,7 +2536,8 @@ th {
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  background-clip: padding-box;
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
 }
 .dropdown-menu.pull-right {
   right: 0;
@@ -3720,7 +3735,7 @@ p {
   font-weight: 700;
 }
 .f-bold {
-  font-family: "Gotham Black";
+  font-weight: 600;
 }
 .text-darker {
   color: #393030;
@@ -3759,6 +3774,9 @@ a.text-orange {
 }
 .text-md {
   font-size: 15px;
+}
+.text-14px {
+  font-size: 14px;
 }
 .text-sm {
   font-size: 12px;
@@ -3809,10 +3827,12 @@ a.text-orange {
   display: inline-block !important;
 }
 .box-shadow {
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
+          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 }
 .box-shadow-none {
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
 .wrapper-xxs {
   padding: 4px 6px;
@@ -4435,9 +4455,6 @@ body.menu-active div#container {
 body.menu-active header .menu-trigger {
   left: 250px;
 }
-body.menu-active header .title {
-  margin-left: 150px;
-}
 body.menu-active nav#slide-menu {
   left: 0px;
 }
@@ -4465,9 +4482,9 @@ header .menu-trigger {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  -moz-transition: all 300ms;
   -webkit-transition: all 300ms;
-  transition: all 300ms;
+  -o-transition: all 300ms;
+     transition: all 300ms;
   z-index: 9999;
 }
 header .menu-trigger .ico {
@@ -4522,7 +4539,7 @@ header h1.title a {
   float: left;
   display: block;
   border-color: #158ea3;
-  width: 106px;
+  width: 33%;
   position: relative;
 }
 .menu-bar li .ico {
@@ -5029,10 +5046,96 @@ footer a {
 }
 .btn-download-e-ticket {
   background: url(../img/btn-download-eticket.png) no-repeat 0 0;
-  background-size: 279px 44px;
+  -webkit-background-size: 279px 44px;
+          background-size: 279px 44px;
   width: 279px;
   height: 44px;
   display: inline-block;
   padding: 0;
+}
+.filter-sorter-block {
+  height: 45px;
+  background: #ffffff;
+  font-size: 11px;
+  font-weight: 600;
+  padding-left: 10px;
+}
+.filter-sorter-block .sorting-block,
+.filter-sorter-block .filtering-block {
+  margin-top: 13px;
+  height: 17px;
+}
+.filter-sorter-block .sorting-block label,
+.filter-sorter-block .filtering-block label {
+  padding-top: 3px;
+}
+.filter-sorter-block .sorting-block {
+  border-right: 1px dashed #aeaeae;
+}
+.search-criteria-block {
+  height: 70px;
+  border-color: #dadada;
+  line-height: 18px;
+  background-color: #eeebeb;
+}
+.flight-card {
+  padding: 15px 0;
+  border-bottom: 1px solid #dadada;
+}
+.flight-card:last-child {
+  border-top: 0;
+}
+.flight-card .airline-logo {
+  margin: 0;
+  width: 60px;
+  padding: 0 10px;
+}
+.flight-card .airline-logo img {
+  max-width: 100%;
+  margin: 0 auto;
+  max-height: 30px;
+  display: block;
+}
+.flight-card .book-btn-sm {
+  text-align: center;
+  font-weight: 600;
+  padding: 7px;
+  height: 30px;
+  width: 62px;
+  border: 0;
+  background: #fcbc56;
+  font-size: 14px;
+  color: #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 3px 0px 0px #cf8309;
+  box-shadow: 0px 3px 0px 0px #cf8309;
+  top: 15px;
+  right: 10px;
+}
+.flight-card .travel-summary {
+  line-height: 20px;
+}
+.flight-card .travel-info {
+  color: #959595;
+  font-size: 10px;
+}
+.flight-card .travel-info .extra-info {
+  position: absolute;
+  top: 0;
+  right: -25px;
+}
+.flight-card .travel-time .departure,
+.flight-card .travel-time .arrival {
+  min-width: 60px;
+  width: 60px;
+  width: auto !important;
+}
+.flight-card .fare-price .currency,
+.flight-card .fare-price .price {
+  color: #158ea3;
+  margin-right: 5px;
+}
+.flight-card .fare-price .per-person {
+  color: #838383;
 }
 /*# sourceMappingURL=sapta-tour.mobile.css.map */
