--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -16,4 +16,5 @@
 @import "mobile/main.less";
 @import "mobile/form-find.less";
 @import "mobile/booking.less";
+@import "mobile/search-results.less";
 
