search results for flight returns

--- a/app/less/mobile/search-results.less
+++ b/app/less/mobile/search-results.less
@@ -77,7 +77,11 @@
     .extra-info {
       position: absolute;
       top: 0;
-      right: -25px;
+      right: -29px;
+      cursor: pointer;
+      height: 20px;
+      width: 20px;
+      text-align: center;
     }
   }
 
@@ -100,5 +104,21 @@
     .per-person {
       color: #838383
     }
+  }
+}
+
+.outbound-flight-selected {
+  background-color: #fcaf56;
+  line-height: 30px;
+  border-color: #e19c4d;
+  color: #000;
+
+  a {
+    color: #fff;
+  }
+
+  .separator {
+    padding: 0 5px;
+    color: #dc9139;
   }
 }
